# othello

./: CMakeLists.txt  README.md
data/: tiles.lut
doc/: othello_lut.txt
exe/: CMakeLists.txt
exe/engines/: CMakeLists.txt
exe/engines/src/: engine_maxchips.cpp
exe/othello_lut/: CMakeLists.txt  README.md
exe/othello_lut/src/: main.cpp
exe/othello_text/: CMakeLists.txt  README.md
exe/othello_text/src/: main.cpp
lib/othello/: CMakeLists.txt
lib/othello/include/: lut.h  lut64.h  othello.h
lib/othello/src/: lut.cpp  lut64.cpp  othello.cpp
scripts/: cmake.sh
